--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,32 @@
 <head>
   <meta charset="utf-8">
   <title>DistribucionesEsdisticasAngular</title>
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Material Design fonts -->
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link href="assets/css/Material/material-iconfont.css" rel="stylesheet"> -->
+  <!-- Bootstrap -->
+  <link href="assets/css/Bootstrap/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Material Design -->
+  <link href="assets/css/Material/bootstrap-material-design.css" rel="stylesheet">
+  <link href="assets/css/Material/ripples.min.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
+  
+	<script src="assets/js/jquery-3.1.1.min.js"></script>
+		<!-- Bootstrap -->
+	<script src="assets/js/Bootstrap/bootstrap.min.js"></script>
+	<!-- Material Design for Bootstrap -->
+	<script src="assets/js/Material/material.min.js"></script>
+	<script src="assets/js/Material/ripples.min.js"></script>
+	<script>
+	  $.material.init();
+	</script>
 </body>
 </html>
