instalación de chartjs

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
   <title>DistribucionesEsdisticasAngular</title>
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Material Design fonts -->
@@ -17,10 +16,13 @@
   <!-- Bootstrap Material Design -->
   <link href="assets/css/Material/bootstrap-material-design.css" rel="stylesheet">
   <link href="assets/css/Material/ripples.min.css" rel="stylesheet">
+  <!-- chart js-->
+  <script src=" https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
+
 </head>
 <body>
   <app-root></app-root>
-  
+
 	<script src="assets/js/jquery-3.1.1.min.js"></script>
 		<!-- Bootstrap -->
 	<script src="assets/js/Bootstrap/bootstrap.min.js"></script>
